--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.sigrok.flutter_libserialport_example">
+    package="org.sigrok.x2_fwupdate">
    <application
-        android:label="flutter_libserialport_example"
+        android:label="x2_fwupdate"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
