--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
-name: flutter_libserialport_example
+name: x2_fwupdate
 description: Demonstrates how to use the flutter_libserialport plugin.
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_libserialport: ^0.3.0
+  flutter_riverpod: ^2.3.6
 
 flutter:
   uses-material-design: true
