--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   loading_animation_widget: ^1.2.0+4
   process_run: ^0.13.0
+  url_launcher: ^6.1.12
 
 flutter:
   uses-material-design: true
