--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,20 @@ environment:
   sdk: '>=2.17.0'
 
 dependencies:
+
   flutter:
     sdk: flutter
-  flutter_libserialport: ^0.3.0
+  # flutter_libserialport: ^0.3.0 # 0.2.3 works
+  # # quick_usb: 0.3.1
+  # flutter_riverpod: ^2.3.6
+  # loading_animation_widget: ^1.2.0+4
+  # process_run: ^0.13.0
+  # url_launcher: ^6.1.12
+  quick_usb: 0.3.1
+  flutter_libserialport: ^0.2.3
   flutter_riverpod: ^2.3.6
   loading_animation_widget: ^1.2.0+4
-  process_run: ^0.13.0
+  process_run: ^0.13.1
   url_launcher: ^6.1.12
 
 flutter:
